// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`The Checkbox Field renders 1`] = `
<FormGroup
  bsClass="form-group"
  controlId="fieldName"
>
  <Label
    label="Checkbox Test"
    required={false}
  />
  <InputGroup
    bsClass="input-group"
  >
    <Checkbox
      bsClass="checkbox"
      checked={false}
      disabled={false}
      inline={false}
      name="fieldName_option1"
      onChange={[Function]}
      onFocus={[Function]}
      title=""
      value="One"
    >
      Option 1
    </Checkbox>
    <Checkbox
      bsClass="checkbox"
      checked={false}
      disabled={false}
      inline={false}
      name="fieldName_option2"
      onChange={[Function]}
      onFocus={[Function]}
      title=""
      value="Two"
    >
      Option 2
    </Checkbox>
    <Checkbox
      bsClass="checkbox"
      checked={false}
      disabled={false}
      inline={false}
      name="fieldName_option3"
      onChange={[Function]}
      onFocus={[Function]}
      title=""
      value="Three"
    >
      Option 3
    </Checkbox>
  </InputGroup>
  <HelpBlock
    bsClass="help-block"
    style={
      Object {
        "minHeight": "3ex",
      }
    }
  />
</FormGroup>
`;

exports[`The Checkbox Field renders the help message with a break 1`] = `
<FormGroup
  bsClass="form-group"
  controlId="fieldName"
  validationState={null}
>
  <Label
    label="Checkbox Test"
    required={false}
  />
  <InputGroup
    bsClass="input-group"
  >
    <Checkbox
      bsClass="checkbox"
      checked={false}
      disabled={false}
      inline={false}
      name="fieldName_option1"
      onChange={[Function]}
      onFocus={[Function]}
      title=""
      value="One"
    >
      Option 1
    </Checkbox>
    <Checkbox
      bsClass="checkbox"
      checked={false}
      disabled={false}
      inline={false}
      name="fieldName_option2"
      onChange={[Function]}
      onFocus={[Function]}
      title=""
      value="Two"
    >
      Option 2
    </Checkbox>
    <Checkbox
      bsClass="checkbox"
      checked={false}
      disabled={false}
      inline={false}
      name="fieldName_option3"
      onChange={[Function]}
      onFocus={[Function]}
      title=""
      value="Three"
    >
      Option 3
    </Checkbox>
  </InputGroup>
  <HelpBlock
    bsClass="help-block"
    style={
      Object {
        "minHeight": "6ex",
      }
    }
  >
    There was an error
    <br />
    The help Text
  </HelpBlock>
</FormGroup>
`;

exports[`The Checkbox Field renders with custom options 1`] = `
<FormGroup
  bsClass="form-group"
  controlId="fieldName"
>
  <Label
    label="Checkbox Test"
    required={false}
  />
  <InputGroup
    bsClass="input-group"
  >
    <Checkbox
      bsClass="checkbox"
      checked={false}
      disabled={false}
      inline={false}
      name="fieldName_option1"
      onChange={[Function]}
      onFocus={[Function]}
      title=""
      value="One"
    >
      Option 1
    </Checkbox>
    <Checkbox
      bsClass="checkbox"
      checked={false}
      disabled={false}
      inline={false}
      name="fieldName_option2"
      onChange={[Function]}
      onFocus={[Function]}
      title=""
      value="Two"
    >
      Option 2
    </Checkbox>
    <Checkbox
      bsClass="checkbox"
      checked={false}
      disabled={false}
      inline={false}
      name="fieldName_option3"
      onChange={[Function]}
      onFocus={[Function]}
      title=""
      value="Three"
    >
      Option 3
    </Checkbox>
  </InputGroup>
  <HelpBlock
    bsClass="help-block"
    style={
      Object {
        "minHeight": "3ex",
      }
    }
  />
</FormGroup>
`;
